--- a/index.html
+++ b/index.html
@@ -12,42 +12,47 @@
 </head>
 
 <body>
+    <!-- Navbar go here -->
     <nav></nav>
+
     <div class="container">
         <div class="row">
-            <div class="col-3 border">
-                <div class="profile">
-profile
+
+            <!-- First Colum: Profile & Trending -->
+            <div class="col-3">
+                <div class="profile  border">
+                profile
                 </div>
-                <div class="hastag">hastag</div>
+                <div class="hastag  border">trending goes here</div>
             </div>
+
+
+            <!-- second column: input, tweet btn, remainning count/ tweets template -->
             <div class="col-6 border">
                 <div id="input border">
                     <input type="text" value="some text here">
                     <button>Tweet</button>
                     <span> remainning words</span>
                 </div>
-                <div id="tweets border">
+                <div id="tweets border my-5">
                         <div class="tweetTemplate d-flex border">
                             <img class="avatar" src="" alt="">
-                            <div class="tweet-content">
+                            <div class="tweet-content border">
                                 <p>hello world</p>
-                            <div class="icons"><span>reply</span><span>Retweet</span>
+                            <div class="icons border"><span>reply</span><span>Retweet</span>
                                 <span>Like/unlike</span><span>direct Mess</span></div>    
                             </div>
-
                         </div>
-                </div>
-                
+                </div>            
             </div>
-            <div class="col-3 border">
-                <div id="ads border">
-ads here
-                </div>
-            
-            </div>
-        </div>
 
+            <!-- Third Column: Ads/followers footer/info of page-->
+            <div class="col-3">
+                <div id="ads" class="border">ads goes here</div>
+                <div id="info"  class="border">Mini twitter 2019 </div>
+            </div>
+
+        </div>
     </div>
     <script src="main.js"></script>
 </body>
