--- a/index.html
+++ b/index.html
@@ -10,19 +10,32 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
+
 </head>
 
 <body>
     <!-- Navbar go here -->
-    <nav></nav>
-
     <div class="container">
+        <nav class="navbar navbar-expand d-flex justify-content-between px-0">
+            <ul class="navbar-nav ml-0 px-0">
+                <li class="nav-item active"><a href="#" class="nav-link"><i class="fas fa-igloo"></i> Home<span class="sr-only">(current)</span></a></li>
+                <li class="nav-item active"><a href="#" class="nav-link"><i class="far fa-bell"></i> Notifications</a></li>
+                <li class="nav-item active"><a href="#" class="nav-link"><i class="far fa-envelope"></i> Messages</a></li>
+            </ul>
+            <a href="#" class="navbar-brand"><i class="fab fa-twitter"></i></span>
+            </a>
+            <form class="form-inline position-relative">
+                <input type="search" class="form-control search" placeholder="search...">
+                <i class="fas fa-search"></i>
+            </form>
+        </nav>
+
         <div class="row">
 
             <!-- First Colum: Profile & Trending -->
             <div class="col-3">
                 <div class="profile  border">
-                profile
+                    profile
                 </div>
                 <div class="hastag  border">trending goes here</div>
             </div>
@@ -36,21 +49,21 @@
                     <span> remainning words</span>
                 </div>
                 <div id="tweets border my-5">
-                        <div class="tweetTemplate d-flex border">
-                            <img class="avatar" src="" alt="">
-                            <div class="tweet-content border">
-                                <p>hello world</p>
+                    <div class="tweetTemplate d-flex border">
+                        <img class="avatar" src="" alt="">
+                        <div class="tweet-content border">
+                            <p>hello world</p>
                             <div class="icons border"><span>reply</span><span>Retweet</span>
-                                <span>Like/unlike</span><span>direct Mess</span></div>    
-                            </div>
+                                <span>Like/unlike</span><span>direct Mess</span></div>
                         </div>
-                </div>            
+                    </div>
+                </div>
             </div>
 
             <!-- Third Column: Ads/followers footer/info of page-->
             <div class="col-3">
                 <div id="ads" class="border">ads goes here</div>
-                <div id="info"  class="border">Mini twitter 2019 </div>
+                <div id="info" class="border">Mini twitter 2019 </div>
             </div>
 
         </div>
