add img folder and add favicon in html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="/img/twitter-favicon.png" type="image/x-icon">
 
 
 </head>
@@ -31,7 +32,6 @@
         </nav>
 
         <div class="row">
-
             <!-- First Colum: Profile & Trending -->
             <div class="col-3">
                 <div class="profile  border">
