--- a/index.html
+++ b/index.html
@@ -4,25 +4,30 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Mini Twitter</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    />
-  </head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="/img/twitter-favicon.png" type="image/x-icon">
 
   <body>
     <!-- Navbar go here -->
-    <nav></nav>
-
     <div class="container">
+        <nav class="navbar navbar-expand d-flex justify-content-between px-0">
+            <ul class="navbar-nav ml-0 px-0">
+                <li class="nav-item active"><a href="#" class="nav-link"><i class="fas fa-igloo"></i> Home<span class="sr-only">(current)</span></a></li>
+                <li class="nav-item active"><a href="#" class="nav-link"><i class="far fa-bell"></i> Notifications</a></li>
+                <li class="nav-item active"><a href="#" class="nav-link"><i class="far fa-envelope"></i> Messages</a></li>
+            </ul>
+            <a href="#" class="navbar-brand"><i class="fab fa-twitter"></i></span>
+            </a>
+            <form class="form-inline position-relative">
+                <input type="search" class="form-control search" placeholder="search...">
+                <i class="fas fa-search"></i>
+            </form>
+        </nav>
+
       <div class="row">
         <!-- First Colum: Profile & Trending -->
         <div class="col-3">
@@ -32,28 +37,27 @@
           <div class="hastag border">trending goes here</div>
         </div>
 
-        <!-- second column: input, tweet btn, remainning count/ tweets template -->
-        <div class="col-6 border">
-          <div id="input border">
-            <input type="text" value="some text here" />
-            <button>Tweet</button>
-            <span> remainning words</span>
-          </div>
-          <div id="tweets border my-5">
-            <div class="tweetTemplate d-flex border">
-              <img class="avatar" src="" alt="" />
-              <div class="tweet-content border">
-                <p>hello world</p>
-                <div class="icons border">
-                  <span>reply</span><span>Retweet</span> <span>Like/unlike</span
-                  ><span>direct Mess</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
 
-        <!-- Third Column: Ads/followers footer/info of page-->
+            <!-- second column: input, tweet btn, remainning count/ tweets template -->
+            <div class="col-6 border">
+                <div id="input border">
+                    <input type="text" value="some text here">
+                    <button>Tweet</button>
+                    <span> remainning words</span>
+                </div>
+                <div id="tweets border my-5">
+                    <div class="tweetTemplate d-flex border">
+                        <img class="avatar" src="" alt="">
+                        <div class="tweet-content border">
+                            <p>hello world</p>
+                            <div class="icons border"><span>reply</span><span>Retweet</span>
+                                <span>Like/unlike</span><span>direct Mess</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Third Column: Ads/followers footer/info of page-->
         <div class="right-col col-3">
                 <div class="top-right border border-light border-4">
                         <div class="p-3">
