col3 outline finished

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 </head>
 
-<body>
+<body style="background-color: #180404; color: rgb(255, 245, 203)">
     <!-- Navbar go here -->
     <nav></nav>
 
-    <div class="container">
-        <div class="row">
+    <div class="container" >
+        <div class="row" >
 
             <!-- First Colum: Profile & Trending -->
             <div class="col-3">
@@ -49,8 +49,67 @@
 
             <!-- Third Column: Ads/followers footer/info of page-->
             <div class="col-3">
-                <div id="ads" class="border">ads goes here</div>
-                <div id="info"  class="border">Mini twitter 2019 </div>
+                <div style="margin: 5px;" id="ads" class="border">ads goes here>
+                </div>
+            <div style="margin: 5px;" class="border" >
+                <div class="d-flex align-items-baseline ">
+                    <strong>Who to follow </strong>  •
+                    <a  href="#" style="font-size: 10px"> Refresh</a> •
+                    <a  href="#" style="font-size: 10px"> View all</a>
+                </div>
+                <div class="followers d-flex" style="margin-top: 5px">
+                    <img src="img/profile1.jpg" alt="" class=" border rounded-circle folprofile">
+                    <div style="margin-left:10px;">
+                        <span>
+                            <a href="#"><span>name</span></a>
+                            <i class="fas fa-user-check"></i>
+                            <a href="#"><span>@userlink</span></a>
+                        </span>
+                        <button type="button" class="btn btn-outline-primary">Follow</button>
+                    </div>
+                </div>
+                <div class="followers d-flex">
+                    <img src="img/profile1.jpg" alt="" class=" border rounded-circle folprofile">
+                    <div style="margin-left:10px;">
+                        <span>
+                            <a href="#"><span>name</span></a>
+                            <i class="fas fa-user-check"></i>
+                            <a href="#"><span>@userlink</span></a>
+                        </span>
+                        <button type="button" class="btn btn-outline-primary">Follow</button>
+                    </div>
+                </div>
+                <div class="followers d-flex">
+                    <img src="img/profile1.jpg" alt="" class=" border rounded-circle folprofile">
+                    <div style="margin-left:10px;">
+                        <span>
+                            <a href="#"><span>name</span></a>
+                            <i class="fas fa-user-check"></i>
+                            <a href="#"><span>@userlink</span></a>
+                        </span>
+                        <button type="button" class="btn btn-outline-primary">Follow</button>
+                    </div>
+                </div>
+              </div>
+                <div style="margin: 5px;" class="flex-module border">
+                      <ul class="d-flex justify-content-between flex-wrap" style="list-style: none; font-size: 9px; padding: 10px; margin-bottom: 0px;">
+                        <li class="Footer-item Footer-copyright copyright">©loned Twitter</li>
+                        <li class="Footer-item"><a class="Footer-link" href="/about" rel="noopener">About</a></li>
+                        <li class="Footer-item"><a class="Footer-link" href="//support.twitter.com" rel="noopener">Help Center</a></li>
+                        <li class="Footer-item"><a class="Footer-link" href="/tos" rel="noopener">Terms</a></li>
+                        <li class="Footer-item"><a class="Footer-link" href="/privacy" rel="noopener">Privacy policy</a></li>
+                        <li class="Footer-item"><a class="Footer-link" href="//support.twitter.com/articles/20170514" rel="noopener">Cookies</a></li>
+                        <li class="Footer-item"><a class="Footer-link" href="//business.twitter.com/en/help/troubleshooting/how-twitter-ads-work.html" rel="noopener">Ads info</a></li>
+                        <li class="Footer-item"><a class="Footer-link" href="//about.twitter.com/press/brand-assets" rel="noopener">Brand</a></li>
+                        <li class="Footer-item"><a class="Footer-link" href="https://blog.twitter.com" rel="noopener">Blog</a></li>
+                        <li class="Footer-item"><a class="Footer-link" href="http://status.twitter.com" rel="noopener">Status</a></li>
+                        <li class="Footer-item"><a class="Footer-link" href="https://about.twitter.com/products" rel="noopener">Apps</a></li>
+                        <li class="Footer-item"><a class="Footer-link" href="https://about.twitter.com/careers" rel="noopener">Jobs</a></li>
+                        <li class="Footer-item"><a class="Footer-link" href="https://marketing.twitter.com" rel="noopener">Marketing</a></li>
+                        <li class="Footer-item"><a class="Footer-link" href="https://business.twitter.com" rel="noopener">Businesses</a></li>
+                        <li class="Footer-item"><a class="Footer-link" href="//dev.twitter.com" rel="noopener">Developers</a></li>
+                      </ul>
+                </div>
             </div>
 
         </div>
