--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 <br>
                 <br>
                 <br>
+        </div>
 
             <!-- Third Column: Ads/followers footer/info of page-->
         <div class="right-col col-3">
