--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <!-- Navbar go here -->
   <div class="container">
     <nav class="navbar navbar-expand d-flex justify-content-between px-0">
-      <ul class="navbar-nav ml-0 px-0">
-        <li class="nav-item active"><a href="#" class="nav-link"><i class="fas fa-igloo"></i> Home<span class="sr-only">(current)</span></a></li>
-        <li class="nav-item active"><a href="#" class="nav-link"><i class="far fa-bell"></i> Notifications</a></li>
-        <li class="nav-item active"><a href="#" class="nav-link"><i class="far fa-envelope"></i> Messages</a></li>
+      <ul class="navbar-nav ml-0 px-0 ">
+        <li class="nav-item active "><a href="#" class="nav-link"><i class="fas fa-igloo"></i> Home<span class="sr-only">(current)</span></a></li>
+        <li class="nav-item "><a href="#" class="nav-link"><i class="far fa-bell"></i> Notifications</a></li>
+        <li class="nav-item "><a href="#" class="nav-link"><i class="far fa-envelope"></i> Messages</a></li>
       </ul>
       <a href="#" class="navbar-brand"><i class="fab fa-twitter"></i></span>
       </a>
@@ -58,18 +58,22 @@
         </div>
 
         <!-- Trending -->
-        <div class="hastag border tw-color mt-2">
+        <div class="hastag border tw-color mt-2 py-2 px-1">
           <h5 class="panel-title">
             Trending worldwide
             <small class="bot-right"><a href="#">Change</a></small>
           </h5>
+          <div class="p-2">
+            <h6 class="mb-0"><a href="#">#hashtag</a></h6>
+            <small class="text-muted">999K Tweets</small>
+          </div>
         </div>
 
       </div>
 
       <!-- second column: input, tweet btn, remainning count/ tweets template -->
       <div class="col-md-6">
-        <div class="panel-color panel-info mt-5 pt-3 pb-2 px-3 border border-3">
+        <div class="panel-color panel-info pb-2 px-3 border border-3">
           <div class="panel-heading panel-color mt-3">
             <div class="media">
               <a class="media-left mr-3" href="#fake">
@@ -87,12 +91,12 @@
 
         </div>
         <div class="panel-body p-3 border border-3" id="tweets-list">
-          <div class="media">
+          <div class="media border">
             <a class="media-left" href="#fake">
               <img alt="" class="media-object rounded" src="http://placehold.it/64x64">
             </a>
             <div class="media-body">
-              <p class="pl-3 pr-2">This is a test tweet! You should add tweets above this one. It will be super fun and
+              <p class="pl-3 pr-2 border">This is a test tweet! You should add tweets above this one. It will be super fun and
                 prove that you can build cool apps.</p>
               <ul class="d-flex">
                 <li><a href="#"><span class="fas fa-share tw-fa mr-4 ml-0"></span></a></li>
