--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
 
         </div>
         <div class="panel-body p-3 border border-3" id="tweets-list">
-          <div class="media border">
+          <div class="media">
             <a class="media-left" href="#fake">
               <img alt="" class="media-object rounded" src="http://placehold.it/64x64">
             </a>
             <div class="media-body">
-              <p class="pl-3 pr-2 border">This is a test tweet! You should add tweets above this one. It will be super fun and
+              <p class="pl-3 pr-2 ">This is a test tweet! You should add tweets above this one. It will be super fun and
                 prove that you can build cool apps.</p>
               <ul class="d-flex">
                 <li><a href="#"><span class="fas fa-share tw-fa mr-4 ml-0"></span></a></li>
