--- a/index.html
+++ b/index.html
@@ -61,11 +61,10 @@
         <div class="hastag border tw-color mt-2 py-2 px-1">
           <h5 class="panel-title">
             Trending worldwide
+            <span class="middot" aria-hidden="true">·</span>
             <small class="bot-right"><a href="#">Change</a></small>
           </h5>
-          <div class="p-2">
-            <h6 class="mb-0"><a href="#">#hashtag</a></h6>
-            <small class="text-muted">999K Tweets</small>
+          <div class="p-2" id="trending">
           </div>
         </div>
 
