--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="row p-2">
             <div class="col-sm-4 bot-right">
               <small>Tweets</small>
-              <a href="#">999</a>
+              <a href="#" id="tweetNum">1</a>
             </div>
             <div class="col-sm-4 bot-right">
               <small>Following</small>
