RemainingCharacters is done (#18)

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
               </a>
               <div class="media-body">
                 <div class="form-group has-feedback has-error">
-                  <input type="text" class="form-control" id="tweet-input">
+                  <input type="text" class="form-control" id="tweet-input"  placeholder="what's in your mind?">
                   <button class="tw-button pull-right float-right mt-2" onclick="addTweet()"> Tweet </button>
                 </div>
               </div>
             </div>
-            <div class="pb-1 d-flex justify-content-end" id="char-remaining"> 140 Characters Remaining </div>
+            <div class="pb-1 d-flex justify-content-end text-success" id="char-remaining"> 140 Characters Remaining </div>
           </div>
 
         </div>
