--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="row p-2">
             <div class="col-sm-4 bot-right">
               <small>Tweets</small>
-              <a href="#">999</a>
+              <a href="#" id="tweetNum">0</a>
             </div>
             <div class="col-sm-4 bot-right">
               <small>Following</small>
@@ -96,8 +96,8 @@
               <img alt="" class="media-object rounded" src="http://placehold.it/64x64">
             </a>
             <div class="media-body">
-              <p class="pl-3 pr-2 ">This is a test tweet! You should add tweets above this one. It will be super fun and
-                prove that you can build cool apps.</p>
+              <p class="pl-3 pr-2">This is a test tweet! You should add tweets above this one. It will be super fun and
+                prove that you can build coo.</p>
               <ul class="d-flex">
                 <li><a href="#"><span class="fas fa-share tw-fa mr-4 ml-0"></span></a></li>
                 <li><a href="#"><span class="fas fa-retweet tw-fa mx-4"></span></a></li>
@@ -202,6 +202,8 @@
       </div>
     </div>
   </div>
+
+  
   <script src="main.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
