--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <a href="#" class="navbar-brand"><i class="fab fa-twitter"></i></span>
       </a>
       <form class="form-inline position-relative">
-        <input type="search" class="form-control search" placeholder="search...">
+        
+        <input type="search" class="form-control search" placeholder="search..." >
         <i class="fas fa-search"></i>
       </form>
     </nav>
@@ -83,7 +84,7 @@
               </a>
               <div class="media-body">
                 <div class="form-group has-feedback has-error">
-                  <input type="text" class="form-control" id="tweet-input"  placeholder="what's in your mind?">
+                  <textarea class="form-control" id="tweet-input"  placeholder="what's in your mind?" ></textarea>
                   <button class="tw-button pull-right float-right mt-2" onclick="addTweet()"> Tweet </button>
                 </div>
               </div>
