done toggleLike and render Like change to red, also retweet don't have red color

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
               </a>
               <div class="media-body">
                 <div class="form-group has-feedback has-error">
-                  <input type="text" class="form-control" id="tweet-input">
-                  <button class="tw-button pull-right float-right mt-2" onclick="addTweet()"> Tweet </button>
+                  <textarea type="text" class="form-control" id="tweet-input"></textarea>
+                  <button id="tweetBtn" class="tw-button pull-right float-right mt-2" onclick="addTweet()" > Tweet </button>
                 </div>
               </div>
             </div>
