change style, temporary fixing conflict

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <h4 class="">
                 Friend Requests
               </h4>
-              <span class='small-text m-0'><a href="#">Refresh</a> ● <a href="#">View all</a></span>
+              <span class='small-text m-0 text-gray'><a href="#" class="text-gray">Refresh</a> ● <a href="#" class="text-gray">View all</a></span>
             </div>
             <div class="">
               <div class="media">
@@ -123,9 +123,9 @@
                 </div>
                 <div class="media-body p-2">
                   <h5 class="media-heading">Donald Trump</h5>
-                  <a href="#" class="btn-follow p-1">
+                  <a href="#" class="btn-follow p-1 text-gray">
                     +
-                    <span class="fas fa-user text-black"></span>
+                    <span class="fas fa-user text-gray"></span>
                     Follow
                   </a>
                 </div>
@@ -136,9 +136,9 @@
                 </div>
                 <div class="media-body p-2">
                   <h5 class="media-heading">Bill Gate</h5>
-                  <a href="#" class="btn-follow p-1">
+                  <a href="#" class="btn-follow p-1  text-gray">
                     +
-                    <span class="fas fa-user text-black"></span>
+                    <span class="fas fa-user  text-gray"></span>
                     Follow
                   </a>
                 </div>
@@ -149,9 +149,9 @@
                 </div>
                 <div class="media-body p-2">
                   <h5 class="media-heading">Kim Jong-Un</h5>
-                  <a href="#" class="btn-follow p-1">
+                  <a href="#" class="btn-follow p-1  text-gray">
                     +
-                    <span class="fas fa-user text-black"></span>
+                    <span class="fas fa-user text-gray"></span>
                     Follow
                   </a>
                 </div>
@@ -168,7 +168,7 @@
 
         <!-- <div id="ads" class="bot-right tw-color border border-light rounded p-3">ads goes here</div> -->
 
-        <div class="row bg-white p-3"></div>
+        <div class="row p-3"></div>
 
 
         <div class="bot-right tw-color d-flex flex-row justify-content-lg-between mb-5 border border-3 rounded p-3">
